--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
+    "@types/node": "^20.2.3",
     "serverless": "^3.31.0",
     "serverless-dynamodb-local": "^0.2.35",
-    "serverless-offline": "^12.0.4"
+    "serverless-offline": "^12.0.4",
+    "serverless-plugin-typescript": "^2.1.4",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "local": "serverless offline start --stage dev",
