--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,7 @@ frameworkVersion: '3'
 plugins:
   - serverless-dynamodb-local
   - serverless-offline
+  - serverless-plugin-typescript
 
 provider:
   name: aws
